# softKMS

./: .gitignore  .gitmodules  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  README.md  ROADMAP.md  STATUS.md  build.rs  build.sh  config.toml.example  pkcs11.conf.example  test_complete.sh  test_fix.sh  test_hd_fix.sh  test_passphrase_prompt.sh  test_runner.sh  test_security.sh
cli/: Cargo.toml
cli/src/: main.rs
debian/: changelog  conffiles  control  copyright  pkcs11.conf  rules  softkms-daemon.8  softkms-pkcs11.install  softkms.1  softkms.dirs  softkms.install  softkms.manpages  softkms.postinst  softkms.postinst.debhelper  softkms.postrm  softkms.postrm.debhelper  softkms.service  softkms.tmpfile  watch
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: API.md  ARCHITECTURE.md  CLI_DAEMON_ARCHITECTURE.md  IDENTITIES.md  PKCS11_INTEGRATION.md  PKCS11_MECHANISM_ISSUE.md  PKCS11_PLAN.md  PKCS11_USAGE.md  QUICK_START.md  SECURITY.md  SECURITY_MODEL.md  SECURITY_TESTING.md  USAGE.md  WEBAUTHN.md  cli-hd-ed25519-complete-guide.md  cli-hd-ed25519-guide.md
examples/: demo_passphrase.rs  test_security.rs
pkg/systemd/: softkms.service
proto/: softkms.proto
scripts/: README.md  build-deb.sh  clean.sh  softkms-logs.sh  softkms-start.sh  softkms-status.sh  softkms-stop.sh
src/: key_service.rs  lib.rs  main.rs
src/api/: auth.rs  grpc.rs  interceptor.rs  mod.rs  rest.rs  softkms.rs
src/audit/: mod.rs
src/crypto/: ed25519.rs  hd_ed25519.rs  mod.rs  p256.rs
src/crypto/falcon/: bindings.rs  buffer.rs  mod.rs
src/daemon/: mod.rs
src/hd_wallet/: mod.rs
src/identity/: mod.rs  storage.rs  types.rs  validation.rs
src/ipc/: mod.rs
src/pkcs11/: client.rs  config.rs  mod.rs  rest_client.rs  session.rs
src/security/: config.rs  error.rs  master_key.rs  mod.rs  wrapper.rs
src/storage/: encrypted.rs  file.rs  mod.rs
src/webauthn/: credential.rs  ctap2.rs  derivation.rs  mod.rs  native_messaging.rs  types.rs
tests/: cli_integration_tests.rs  comprehensive_test.sh  e2e_usage_validation.sh  identity_service_tests.rs  p256_comprehensive.rs  pkcs11_signing_tests.rs  rest_e2e_test.sh  validate_usage.sh
tests/common/: mod.rs
tests/e2e/: common.rs  pkcs11_e2e_tests.rs  pkcs11_signing_tests.rs  signature_verification_tests.rs  smoke_tests.rs
tests/integration/: api_tests.rs  daemon_tests.rs  identity_tests.rs  pkcs11_tests.rs  rest_tests.rs  storage_tests.rs
tests/pkcs11/: README.md  test_pkcs11  test_pkcs11.c
