[package]
name = "softkms"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Modern Software Key Management System"
license = "Proprietary"
repository = "https://github.com/yourusername/softKMS"
keywords = ["cryptography", "hsm", "pkcs11", "hd-wallet", "security"]
categories = ["cryptography", "security"]
rust-version = "1.70"

[lib]
name = "softkms"
path = "src/lib.rs"

[[bin]]
name = "softkms-daemon"
path = "src/main.rs"

[[bin]]
name = "softkms-cli"
path = "cli/src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.11"
tonic-reflection = "0.11"
tonic-health = "0.11"
prost = "0.12"

# REST API
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = "0.6"

# HD Wallet
# bitcoin = "0.32" # For BIP32
# slip44 = "0.1"   # For BIP44 coin types

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Security
secrecy = { version = "0.8", features = ["alloc"] }
zeroize = { version = "1.7", features = ["derive"] }

# Configuration
config = "0.14"
toml = "0.8"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# FFI for PKCS#11
libc = "0.2"
cbindgen = "0.26"

# Misc
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dashmap = "5.5"
async-trait = "0.1.89"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"

# PKCS#11 C library
[package.metadata.cbindgen]
name = "SoftKMS PKCS#11"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
