[package]
name = "softkms-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "softkms"
path = "src/main.rs"

[dependencies]
softkms = { path = ".." }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
base64 = "0.22"
rpassword = "7.3"

[build-dependencies]
tonic-build = "0.11"
